Add 8bkc-nofrendo as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "8bkc-gnuboy"]
 	path = 8bkc-gnuboy
 	url = https://github.com/shreechandansamal/8bkc-gnuboy.git
+[submodule "8bkc-nofrendo"]
+	path = 8bkc-nofrendo
+	url = https://github.com/shreechandansamal/8bkc-nofrendo.git
